# prizmia

./: .gitignore  README.md  analyze-and-fix-descriptions.cjs  audit-prizm-system.txt  clean-bad-articles.cjs  diagnose-articles.cjs  improve-manifeste.cjs  netlify.toml  package-lock.json  package.json  remove-reliability-scores.cjs  structure-prizmia.txt  structure-src-complete.txt
_archives/: rapport-archivage-2025-08-16.json  rapport-nettoyage-final-2025-08-16.json
backup-2025-08-31-1033/: 2025-08-12-manifeste-prizm-ai.md  2025-08-16-adoption-de-l-ia-dans-les-pme-francaises-etat-des-lieux.md  2025-08-16-automatiser-sa-prospection-commerciale-avec-l-ia-methode-en-.md  2025-08-16-creer-du-contenu-marketing-avec-l-ia-workflow-complet-et-out.md  2025-08-16-implementer-chatgpt-dans-votre-service-client-guide-complet.md
core/: production.js
docs/: PRIZM-AI-V5-PYTHON-LANGGRAPH.md  STRUCTURE.md
pipelines/: .gitignore
pipelines/content-generation/prizm-ai-v5/: .gitignore  README.md  pyproject.toml
pipelines/content-generation/prizm-ai-v5/src/prizm_ai/: __init__.py  main.py
pipelines/content-generation/prizm-ai-v5/src/prizm_ai/agents/: __init__.py  analyse.py  base.py  critique.py  publish.py  redaction.py  revision.py  veille.py  visuels.py
pipelines/content-generation/prizm-ai-v5/src/prizm_ai/config/: __init__.py  settings.py  templates.py  visual_identity.py  voix_prizm.py
pipelines/content-generation/prizm-ai-v5/src/prizm_ai/evaluation/: __init__.py
pipelines/content-generation/prizm-ai-v5/src/prizm_ai/graph/: __init__.py  state.py  workflow.py
pipelines/content-generation/prizm-ai-v5/src/prizm_ai/utils/: __init__.py  parser_perplexity.py
public/: _redirects
src/: content.config.ts
website/: astro.config.mjs  consts.ts
(+528 files in other folders)
